--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import background from '@/assets/background.svg'
+
 interface Props {
   title: string
 }
@@ -17,6 +19,7 @@ const { title } = Astro.props
   </head>
   <body>
     <div>
+      <img id="background" src={background.src} alt="" fetchpriority="high" />
       <slot />
     </div>
   </body>
@@ -40,5 +43,16 @@ const { title } = Astro.props
     display: grid;
     place-content: center;
     padding: 2rem;
+  }
+
+  #background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    filter: blur(100px);
+    opacity: 0.8;
   }
 </style>
