--- a/src/pages/libro/[slug].astro
+++ b/src/pages/libro/[slug].astro
@@ -3,7 +3,6 @@ import { getCollection, render } from 'astro:content'
 import { SHOW_BUY_BUTTON } from 'astro:env/server'
 import Layout from '@/layouts/Layout.astro'
 import BuyButton from '@/components/BuyButton.astro'
-import BuyButtonFallback from '@/components/BuyButtonFallback.astro'
 import BookScore from '@/components/BookScore.astro'
 
 export async function getStaticPaths() {
@@ -37,7 +36,7 @@ export const prerender = true
       {
         SHOW_BUY_BUTTON && (
           <BuyButton server:defer buy={buy}>
-            <BuyButtonFallback buy={buy} />
+            <BuyButton slot="fallback" buy={buy} />
           </BuyButton>
         )
       }
